# coalinfer

./: README.md  benches.txt
python/: pyproject.toml
python/coalinfer/: README.md  __init__.py  api.py  bench_latency.py  bench_serving.py  check_env.py  launch_server.py  launch_server_llavavid.py  utils.py
python/coalinfer/lang/: compiler.py  interpreter.py  ir.py  tracer.py
python/coalinfer/lang/backend/: anthropic.py  base_backend.py  litellm.py  openai.py  runtime_endpoint.py  vertexai.py
python/coalinfer/srt/: conversation.py  hf_transformers_utils.py  mm_utils.py  model_config.py  server.py  server_args.py  utils.py
python/coalinfer/srt/configs/: __init__.py  exaone.py
python/coalinfer/srt/constrained/: __init__.py  base_tool_cache.py  fsm_cache.py  jump_forward.py
python/coalinfer/srt/layers/: activation.py  decode_attention.py  extend_attention.py  layernorm.py  logits_processor.py  pooler.py  prefill_attention.py  radix_attention.py  sampler.py
python/coalinfer/srt/managers/: controller_multi.py  controller_single.py  detokenizer_manager.py  io_struct.py  policy_scheduler.py  schedule_batch.py  tokenizer_manager.py  tp_worker.py
python/coalinfer/srt/mem_cache/: chunk_cache.py  flush_cache.py  memory_pool.py  radix_cache.py
python/coalinfer/srt/model_executor/: cuda_graph_runner.py  model_runner.py  (+1 more)
python/coalinfer/test/: few_shot_gsm8k.py  run_eval.py  runners.py  simple_eval_gpqa.py  simple_eval_humaneval.py  simple_eval_math.py  simple_eval_mgsm.py  simple_eval_mmlu.py  test_activation.py  test_layernorm.py  test_programs.py  test_utils.py
(+192 files in other folders)
