[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coalinfer"
version = "0.0.1"
description = "LLM inference engine designed for fast and efficient coal production."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "requests",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
srt = ["aiohttp", "decord", "fastapi", "hf_transfer", "huggingface_hub", "interegular",
       "packaging", "pillow", "psutil", "pydantic", "python-multipart",
       "torch", "torchao", "uvicorn", "uvloop", "zmq",
       "vllm==0.5.5", "outlines>=0.0.44"]
openai = ["openai>=1.0", "tiktoken"]
anthropic = ["anthropic>=0.20.0"]
litellm = ["litellm>=1.0.0"]
test = ["jsonlines", "matplotlib", "pandas", "sentence_transformers", "accelerate"]
all = ["coalinfer[srt]", "coalinfer[openai]", "coalinfer[anthropic]", "coalinfer[litellm]"]
dev = ["coalinfer[all]", "coalinfer[test]"]

[project.urls]
"Homepage" = "https://github.com/sgl-project/coalinfer"
"Bug Tracker" = "https://github.com/sgl-project/coalinfer/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs*", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs*", "dist*", "playground*", "scripts*", "tests*"]
